package login.proto;

import "ServerInfo.proto";
import "ClusterProp.proto";
import "ClusterStatus.proto";
import "ClusterPopStatus.proto";

message ClusterInfo {
 required uint32 cluster_id = 1;
 required string cluster_name = 2;
 optional string lobby_host = 3;
 optional uint32 lobby_port = 4;
 optional uint32 cluster_pop = 5;
 optional uint32 max_cluster_pop = 6;
 optional ClusterPopStatus cluster_pop_status = 7;
 required uint32 language_id = 8;
 required ClusterStatus cluster_status = 9;
 repeated ServerInfo server_list = 10;
 repeated ClusterProp property_list = 11;
}

